--- a/ui/src/App.scss
+++ b/ui/src/App.scss
@@ -57,7 +57,7 @@ header {
     margin: $gridSize;
   }
   .Word-hint:last-child {
-    outline-style: dotted
+    border-style: dotted
   }
 }
 
@@ -74,6 +74,7 @@ header {
   display: flex;
   flex-direction: column;
   max-width: 100%;
+  margin-bottom: 2*$standardMargin;
 }
 
 .Word-card {
@@ -84,19 +85,18 @@ header {
   align-items: center;
   justify-content: center;
   background-color: white;
-  border-radius: $standardMargin;
+  border-radius: $gridSize;
   font-size: 32px;
   margin: $standardMargin;
-  outline: 2px solid black;
-  outline-offset: -$standardMargin;
+  border: 2px solid black;
   white-space: nowrap;
   position: relative;
 
   &.Word-card-correct {
-    outline-color: green
+    border-color: green !important;
   }
   &.Word-card-wrong {
-    outline-color: red
+    border-color: red !important;
   }
 
   .Author-tag {
@@ -125,8 +125,13 @@ header {
   }
 }
 
-.Word-hint-input button {
-  margin-left: 8px;
+.Word-hint-input {
+  display: flex;
+  justify-content: center;
+
+  button {
+    margin-left: 8px;
+  } 
 }
 
 .Word-hint {
@@ -139,7 +144,7 @@ header {
   background-color: white;
   font-size: 48px;
   margin: $standardMargin;
-  outline: 2px solid black;
+  border: 2px solid black;
   font-family: $handwriting;
   white-space: nowrap;
   position: relative;
@@ -165,6 +170,10 @@ header {
     font-size: 16px;
     line-height: 16px;
     margin: $gridSize;
+  }
+
+  .Done-icon {
+    font-size: 80px;
   }
 }
 
