--- a/ui/src/App.scss
+++ b/ui/src/App.scss
@@ -219,6 +219,23 @@ header {
   color: inherit;
 }
 
+$colorButtonSize: 4*$gridSize;
+$iconSize: 3*$gridSize;
+.Color-picker {
+  width: 4*$colorButtonSize;
+  margin: $standardMargin;
+  .Color-button {
+    border-radius: 0;
+    margin: 0;
+    padding: $colorButtonSize/2;
+
+    &.Color-selected {
+      padding: $colorButtonSize/2-$iconSize/2;
+      color: white;
+    }
+  }
+}
+
 $pencilWidth: 12px;
 $pencilLength: 4*$pencilWidth;
 $pencilNib: 1px;
