Add user first then enter words

--- a/ui/src/App.scss
+++ b/ui/src/App.scss
@@ -57,7 +57,7 @@ header {
   max-width: 100%;
 }
 
-.New-player, .Player-list {
+.New-player, .Player-list, .Word-adder {
   flex: 1;
   display: flex;
   flex-direction: column;
