New build, and small style fix

--- a/ui/src/App.scss
+++ b/ui/src/App.scss
@@ -85,7 +85,7 @@ header {
   Button, .MuiFormControl-root {
     margin: $gridSize;
   }
-  .Word-hint:last-child {
+  .Word-hint.Word-hint-writing {
     border-style: dotted
   }
 }
