Translation fixes and new build

--- a/ui/src/App.scss
+++ b/ui/src/App.scss
@@ -126,6 +126,7 @@ header {
   max-width: 400px;
   height: 250px;
   max-height: 30vh;
+  min-height: 150px;
   display: flex;
   align-items: center;
   justify-content: center;
